--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
             <div class="container">
                 <div class="top-bar-inner-con d-flex align-items-center justify-content-between">
                     <div class="left-con">
-                        <a href="mailto:help@traveltrek.com"><i class="fa-solid fa-envelope"></i> help@traveltrek.com</a>
+                        <a href="mailto:info@luckytourntravels.com"><i class="fa-solid fa-envelope"></i> info@luckytourntravels.com</a>
                         <!-- left con -->
                     </div>
-                    <div class="right-con"><a href="tel:+1(0800)123456"><i class="fa-solid fa-square-phone"></i> +1 (0800) 123
-              456</a>
+                    <div class="right-con"><a href="tel:+919109106321"><i class="fa-solid fa-square-phone"></i> +91 9109106321</a>
                         <!-- right con -->
                     </div>
                     <!-- top bar inner con -->
@@ -68,17 +67,21 @@
         <!-- HEADER SECTION -->
         <header class="w-100 flaot-left header-con main-box position-relative">
             <div class="container">
+                <!-- navbar section -->
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand" href="index.html">
                         <figure class="mb-0">
                             <img src="assets/images/lucky-logo.svg" alt="logo-icon">
                         </figure>
                     </a>
+
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
           </button>
+
+
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
@@ -100,8 +103,8 @@
                         </ul>
                         <div class="header-contact">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="contact.html" class="live-chat-btn d-inline-block"><i class="fa-solid fa-comment-dots"></i>
-                    Live Chat</a></li>
+                                <li><a href="contact.html" class="live-chat-btn d-inline-block"><i class="fa-solid fa-map-location-dot"></i>
+                    Book Now</a></li>
                                 <!-- list unstyled -->
                             </ul>
                             <!-- header contact -->
