--- a/about.html
+++ b/about.html
@@ -68,69 +68,7 @@
         <div class="clearfix"></div>
         <!-- HEADER SECTION -->
         <header class="w-100 flaot-left header-con main-box position-relative">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html">
-                        <figure class="mb-0">
-                            <img src="assets/images/lucky-logo.svg" alt="logo-icon">
-                        </figure>
-                    </a>
-                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-          </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link p-0" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link p-0" href="about.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link p-0" href="destinations.html">Destination</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link p-0 dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                                    <a class="dropdown-item" href="booking.html">Booking</a>
-                                    <a class="dropdown-item" href="faq.html">Faq</a>
-                                    <a class="dropdown-item" href="contact.html">Contact</a>
-                                    <a class="dropdown-item" href="team.html">Team</a>
-                                    <a class="dropdown-item" href="service.html">Service</a>
-                                    <a class="dropdown-item" href="testimonial.html">Testimonial</a>
-
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle p-0" href="blog.html" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                                    <a class="dropdown-item" href="blog.html">Blog</a>
-                                    <a class="dropdown-item" href="load-more.html">Load More</a>
-                                    <a class="dropdown-item" href="single-blog.html">Single Blog</a>
-                                    <a class="dropdown-item" href="one-column.html">One Column</a>
-                                    <a class="dropdown-item" href="two-column.html">Two Column</a>
-                                    <a class="dropdown-item" href="three-column.html">Three Column</a>
-                                    <a class="dropdown-item" href="three-colum-sidbar.html">Three Column Sidbar</a>
-                                    <a class="dropdown-item" href="four-column.html">Four Column</a>
-                                    <a class="dropdown-item" href="six-colum-full-wide.html">Six Column</a>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="header-contact">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="contact.html" class="live-chat-btn d-inline-block"><i class="fa-solid fa-comment-dots"></i>
-                    Live Chat</a></li>
-                                <!-- list unstyled -->
-                            </ul>
-                            <!-- header contact -->
-                        </div>
-                        <!--  -->
-                    </div>
-                </nav>
-                <!-- container -->
-            </div>
+            <div class="container" id="lucky-navbar-container">
             <!-- header-con -->
         </header>
         <!-- BANNER SECTION -->
@@ -653,6 +591,8 @@
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/search.js"></script>
+    <script src="assets/component/topBar.js"></script>
+
 </body>
 
 </html>
