--- a/index.html
+++ b/index.html
@@ -183,22 +183,19 @@
                         <div class="server-box var1">
                             <img class="img-fluid" src="assets/images/serve-icon1.png" alt="icon">
                             <h4>Lot of Choices</h4>
-                            <p class="mb-0">Lorem ipsum dolor sit ametc onsectetur adipiscing elit sed do eiusmod tempor incididun tut labore et dolore.
-                            </p>
+                            <p class="mb-0">Choose from a variety of destinations and experiences tailored just for you.</p>
                             <!-- server box -->
                         </div>
                         <div class="server-box var2">
                             <img class="img-fluid" src="assets/images/serve-icon2.png" alt="icon">
                             <h4>Best Tour Guide</h4>
-                            <p class="mb-0">Lorem ipsum dolor sit ametc onsectetur adipiscing elit sed do eiusmod tempor incididun tut labore et dolore.
-                            </p>
+                            <p class="mb-0">Discover the best spots with our expert, friendly guides.</p>
                             <!-- server box -->
                         </div>
                         <div class="server-box var3">
                             <img class="img-fluid" src="assets/images/serve-icon3.png" alt="icon">
                             <h4>Easy Booking </h4>
-                            <p class="mb-0">Lorem ipsum dolor sit ametc onsectetur adipiscing elit sed do eiusmod tempor incididun tut labore et dolore.
-                            </p>
+                            <p class="mb-0">Book your trip quickly and easily with our simple process.</p>
                             <!-- server box -->
                         </div>
                         <!-- server outer -->
@@ -266,23 +263,23 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-travel-content">
-                        <h4 class="text-uppercase">About TrevelTrek</h4>
-                        <h2>World Best Travel Agency Company Since 2015.</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliquaquis</p>
+                        <h4 class="text-uppercase">About Lucky Tour & Travels</h4>
+                        <h2>India's Best Travel Agency Since 2018.</h2>
+                        <p>At Luck Tour & Travels, we are dedicated to crafting exceptional travel experiences for our clients. Since our inception, we’ve been committed to offering top-notch services, ensuring every journey is memorable.</p>
                         <ul class="list-unstyled p-0 listing">
-                            <li class="position-relative"><i class="fa-solid fa-check mr-3"></i>Forem commodo dolor sit amet consectetur adipis.</li>
-                            <li class="position-relative"><i class="fa-solid fa-check mr-3"></i>Sed do eiusmod tempor incididunt ut labore et dolore magna. </li>
-                            <li class="position-relative mb-0"><i class="fa-solid fa-check mr-3"></i>Ipsum suspen disse ultrices gravida risus commodo viverra. </li>
+                            <li class="position-relative"><i class="fa-solid fa-check mr-3"></i>Expertly curated trips to suit all preferences.</li>
+                            <li class="position-relative"><i class="fa-solid fa-check mr-3"></i>Seamless travel planning from start to finish. </li>
+                            <li class="position-relative mb-0"><i class="fa-solid fa-check mr-3"></i>Unparalleled customer support every step of the way. </li>
                             <!-- list unstyled -->
                         </ul>
                         <ul class="list-unstyled p-0 m-0 d-flex align-items-center about-count">
-                            <li><span class="d-inline-block counter">13 </span><span class="mb-0 plus1 d-inline-block">+</span> <br> Year
+                            <li><span class="d-inline-block counter">9 </span><span class="mb-0 plus1 d-inline-block">+</span> <br> Year
                                 <br> Experience
                             </li>
                             <li><span class="d-inline-block counter">355 </span><span class="mb-0 plus1 d-inline-block">+</span> <br> Destination
                                 <br> Collaboration
                             </li>
-                            <li><span class="d-inline-block counter">17k</span><span class="mb-0 plus1 d-inline-block">+</span>
+                            <li><span class="d-inline-block counter">17</span><span class="mb-0 plus1 d-inline-block">k+</span>
                                 <br>Happy
                                 <br> Customers
                             </li>
