--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="mailto:info@luckytravels.com"><i class="fa-solid fa-envelope"></i> info@luckytravels.com</a>
                         <!-- left con -->
                     </div>
-                    <div class="right-con"><a href="tel:+919109106321"><i class="fa-solid fa-square-phone"></i>+917828722723, 9977239993</a>
+                    <div class="right-con"><a href="tel:+919109106321"><i class="fa-solid fa-square-phone"></i>+917828722723</a>
                         <!-- right con -->
                     </div>
                     <!-- top bar inner con -->
@@ -596,10 +596,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 footer-logo-con">
                         <a href="index.html">
                             <figure class="footer-logo">
-                                <img src="assets/images/lucky-logo.svg" class="img-fluid" alt="">
+                                <img src="assets/images/lucky-logo-black.svg" class="img-fluid" alt="">
                             </figure>
                         </a>
-                        <p class="text-size-16 footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempororem ipsum dolor sit am econsect ametconsectetetur adipiscing.</p>
+                        <p class="text-size-16 footer-text">At Lucky Tour & Travels, we are dedicated to crafting exceptional travel experiences for our clients. Since our inception, we’ve been committed to offering top-notch services, ensuring every journey is memorable.</p>
                         <figure class="mb-0 payment-icon">
                             <img src="assets/images/payment-card.png" class="img-fluid" alt="">
                         </figure>
