--- a/index.html
+++ b/index.html
@@ -309,132 +309,10 @@
             <div class="heading-title text-center">
                 <h4 class="text-uppercase">Top Destinations</h4>
                 <h2 class="">Explore the Beauty of <br> The World</h2>
-                <!-- heading title -->
             </div>
-            <div class="owl-carousel">
-                <div class="item">
-                    <div class="destination-box position-relative">
-                        <div class="orange-tag position-absolute">$299</div>
-                        <figure><img src="assets/images/destination-img1.jpg" alt="image" class="img-fluid"></figure>
-                        <div class="bottom-con">
-                            <span class="d-block text-uppercase">
-                Venezia, Itlay
-              </span>
-                            <a href="destinations.html">
-                                <h4>Enjoy the beauty of the Rialto Bridge</h4>
-                            </a>
-                            <span class="d-inline-block star-con"><i class="fa-solid fa-star"></i> 4.9 <span
-                  class="d-inline-block review-span">(1.7k Review)</span></span>
-                            <!-- bottom con -->
-                        </div>
-                        <!-- destination-box -->
-                    </div>
-                    <!-- item -->
-                </div>
-                <div class="item">
-                    <div class="destination-box position-relative">
-                        <div class="orange-tag position-absolute">$299</div>
-                        <figure><img src="assets/images/destination-img2.jpg" alt="image" class="img-fluid"></figure>
-                        <div class="bottom-con">
-                            <span class="d-block text-uppercase">
-                Skye, scotland
-              </span>
-                            <a href="destinations.html">
-                                <h4>Enjoy the beauty of the Floating City</h4>
-                            </a>
-                            <span class="d-inline-block star-con"><i class="fa-solid fa-star"></i> 4.9 <span
-                  class="d-inline-block review-span">(1.7k Review)</span></span>
-                            <!-- bottom con -->
-                        </div>
-                        <!-- destination-box -->
-                    </div>
-                    <!-- item -->
-                </div>
-                <div class="item">
-                    <div class="destination-box position-relative">
-                        <div class="orange-tag position-absolute">$299</div>
-                        <figure><img src="assets/images/destination-img3.jpg" alt="image" class="img-fluid"></figure>
-                        <div class="bottom-con">
-                            <span class="d-block text-uppercase">
-                Rio de Janeiro, Brazil
-              </span>
-                            <a href="destinations.html">
-                                <h4>Enjoy the beauty of the Brazil City</h4>
-                            </a>
-                            <span class="d-inline-block star-con"><i class="fa-solid fa-star"></i> 4.9 <span
-                  class="d-inline-block review-span">(1.7k Review)</span></span>
-                            <!-- bottom con -->
-                        </div>
-                        <!-- destination-box -->
-                    </div>
-                    <!-- item -->
-                </div>
-                <!--  -->
-                <div class="item">
-                    <div class="destination-box position-relative">
-                        <div class="orange-tag position-absolute">$299</div>
-                        <figure><img src="assets/images/destination-img1.jpg" alt="image" class="img-fluid"></figure>
-                        <div class="bottom-con">
-                            <span class="d-block text-uppercase">
-                Venezia, Itlay
-              </span>
-                            <a href="destinations.html">
-                                <h4>Enjoy the beauty of the Rialto Bridge</h4>
-                            </a>
-                            <span class="d-inline-block star-con"><i class="fa-solid fa-star"></i> 4.9 <span
-                  class="d-inline-block review-span">(1.7k Review)</span></span>
-                            <!-- bottom con -->
-                        </div>
-                        <!-- destination-box -->
-                    </div>
-                    <!-- item -->
-                </div>
-                <div class="item">
-                    <div class="destination-box position-relative">
-                        <div class="orange-tag position-absolute">$299</div>
-                        <figure><img src="assets/images/destination-img2.jpg" alt="image" class="img-fluid"></figure>
-                        <div class="bottom-con">
-                            <span class="d-block text-uppercase">
-                Skye, scotland
-              </span>
-                            <a href="destinations.html">
-                                <h4>Enjoy the beauty of the Floating City</h4>
-                            </a>
-                            <span class="d-inline-block star-con"><i class="fa-solid fa-star"></i> 4.9 <span
-                  class="d-inline-block review-span">(1.7k Review)</span></span>
-                            <!-- bottom con -->
-                        </div>
-                        <!-- destination-box -->
-                    </div>
-                    <!-- item -->
-                </div>
-                <div class="item">
-                    <div class="destination-box position-relative">
-                        <div class="orange-tag position-absolute">$299</div>
-                        <figure><img src="assets/images/destination-img3.jpg" alt="image" class="img-fluid"></figure>
-                        <div class="bottom-con">
-                            <span class="d-block text-uppercase">
-                Rio de Janeiro, Brazil
-              </span>
-                            <a href="destinations.html">
-                                <h4>Enjoy the beauty of the Brazil City</h4>
-                            </a>
-                            <span class="d-inline-block star-con"><i class="fa-solid fa-star"></i> 4.9 <span
-                  class="d-inline-block review-span">(1.7k Review)</span></span>
-                            <!-- bottom con -->
-                        </div>
-                        <!-- destination-box -->
-                    </div>
-                    <!-- item -->
-                </div>
-                <!-- owl carousel -->
-            </div>
-            <!-- container -->
+            <div id="destinations-carousel" class="owl-carousel"></div>
         </div>
-        <!-- top destinations con -->
     </section>
-
-
 
 
     <!-- REVIEW AND TESTIMONIALS SECTION -->
@@ -447,97 +325,8 @@
                     <h2 class="text-white">What Our Customers Are <br> Saying About Us</h2>
                     <!-- heading content -->
                 </div>
-                <div class="owl-carousel">
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person1.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Kieran Wallace</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person2.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Zachary Chapman</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person3.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Abigail Dawson</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person1.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Kieran Wallace</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person2.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Zachary Chapman</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person3.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Abigail Dawson</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
+                <div class="owl-carousel" id="lucky-testimonial-carousel" >
+                    
                     <!-- owl carousel -->
                 </div>
                 <!-- container -->
@@ -680,10 +469,9 @@
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/component/search.js"></script>
-    <!-- <script src="assets/js/mpTabs.js"></script> -->
     <script src="assets/MasterJs/wholeTab.js"></script>
-    <!-- <script src="assets/js/ujjaintemple.js"></script>
-    <script src="assets/js/jabalportemple.js"></script> -->
+    <script src="assets/MasterJs/destination.js"></script>
+    <script src="assets/MasterJs/testo.js"></script>
 </body>
 
 </html>
