--- a/saplefetch.html
+++ b/saplefetch.html
@@ -58,6 +58,8 @@
         <!-- travel tour con -->
     </section>
 
+    <div id="lucky-footer-container"></div>
+
 </body>
 
 <script src="assets/component/search.js"></script>
@@ -74,5 +76,5 @@
 <script src="assets/js/counter.js"></script>
 <script src="assets/js/custom.js"></script>
 <script src="assets/MasterJs/wholeTab.js"></script>
-
+<script src="assets/component/footer.js"></script>
 </html>
