--- a/about.html
+++ b/about.html
@@ -49,20 +49,8 @@
     <div class="bg-outer-wrapper sub-banner-outer-wrapper float-left w-100">
         <!-- TOP BAR SECTION -->
         <div class="w-100 float-left top-bar-con main-box">
-            <div class="container">
-                <div class="top-bar-inner-con d-flex align-items-center justify-content-between">
-                    <div class="left-con">
-                        <a href="mailto:help@traveltrek.com"><i class="fa-solid fa-envelope"></i> help@traveltrek.com</a>
-                        <!-- left con -->
-                    </div>
-                    <div class="right-con"><a href="tel:+1(0800)123456"><i class="fa-solid fa-square-phone"></i> +1 (0800) 123
-              456</a>
-                        <!-- right con -->
-                    </div>
-                    <!-- top bar inner con -->
-                </div>
-                <!-- container -->
-            </div>
+            <!-- Loader Load -->
+            <div id="lucky-loderAndHeader-container"></div>
             <!-- top bar con -->
         </div>
         <div class="clearfix"></div>
@@ -102,63 +90,7 @@
         <!-- bg outer wrapper -->
     </div>
     <!-- ABOUT US SECTION -->
-    <section class="float-left w-100 about-travel-con position-relative main-box padding-top padding-bottom">
-        <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
-        <img alt="vector" class="vector6 img-fluid position-absolute" src="assets/images/vector6.png">
-        <div class="container wow bounceInUp" data-wow-duration="2s">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="about-travel-img-con position-relative">
-                        <figure class="about-img"><img class="img-fluid" alt="image" src="assets/images/about-travel-img1.jpg">
-                        </figure>
-                        <figure class="about-img2"><img class="img-fluid" alt="image" src="assets/images/about-travel-img2.jpg">
-                        </figure>
-                        <div class="best-destination position-absolute"><a href="https://www.youtube.com/"><i
-                  class="fa-brands fa-youtube d-block"></i>Find
-                Your Best
-                <br>
-                Destination</a>
-                        </div>
-                        <!-- about travel img con -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-travel-content">
-                        <h4 class="text-uppercase">About TrevelTrek</h4>
-                        <h2>World Best Travel Agency Company Since 2015.</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliquaquis</p>
-                        <ul class="list-unstyled p-0 listing">
-                            <li class="position-relative"><i class="fa-solid fa-check mr-3"></i>Forem commodo dolor sit amet consectetur adipis.</li>
-                            <li class="position-relative"><i class="fa-solid fa-check mr-3"></i>Sed do eiusmod tempor incididunt ut labore et dolore magna. </li>
-                            <li class="position-relative mb-0"><i class="fa-solid fa-check mr-3"></i>Ipsum suspen disse ultrices gravida risus commodo viverra. </li>
-                            <!-- list unstyled -->
-                        </ul>
-                        <ul class="list-unstyled p-0 m-0 d-flex align-items-center about-count">
-                            <li><span class="d-inline-block counter">13 </span><span class="mb-0 plus1 d-inline-block">+</span> <br> Year
-                                <br> Experience
-                            </li>
-                            <li><span class="d-inline-block counter">355 </span><span class="mb-0 plus1 d-inline-block">+</span> <br> Destination
-                                <br> Collaboration
-                            </li>
-                            <li><span class="d-inline-block counter">17k</span><span class="mb-0 plus1 d-inline-block">+</span>
-                                <br>Happy
-                                <br> Customers
-                            </li>
-                        </ul>
-                        <div class="green-btn d-inline-block">
-                            <a href="destinations.html" class="d-inline-block">Find Tours</a>
-                        </div>
-                        <!-- about travel content -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <!-- row -->
-            </div>
-            <!-- container -->
-        </div>
-        <!-- about travel con -->
-    </section>
+    <div id="lucky-AboutUs-container"></div>
     <!-- EXPLORING ACTIVITES SECTION -->
     <section class="float-left w-100 exploring-activites-con position-relative main-box padding-top">
         <img alt="vector" class="vector9 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector9.png">
@@ -402,183 +334,17 @@
             <!-- review and testimonials con -->
     </section>
     <!-- NEWS AND ARTICLES SECTION -->
-    <section class="float-left w-100 news-articles-con position-relative padding-top padding-bottom main-box">
-        <img alt="vector" class="vector4 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector4.png">
-        <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
-        <div class="container wow bounceInUp" data-wow-duration="2s">
-            <div class="heading-title text-center">
-                <h4 class="text-uppercase">News & Articles</h4>
-                <h2 class="">Stay Update with <br> Traveltrek
-                </h2>
-                <!-- heading title -->
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/article-img1.jpg" alt="img"></figure>
-                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
-                            <a href="single-blog.html">
-                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
-                            </a>
-                            <!-- bottom left -->
-                        </div>
-                        <!-- article box -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/article-img2.jpg" alt="img"></figure>
-                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
-                            <a href="single-blog.html">
-                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
-                            </a>
-                            <!-- bottom left -->
-                        </div>
-                        <!-- article box -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 last-con">
-                    <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/article-img3.jpg" alt="img"></figure>
-                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
-                            <a href="single-blog.html">
-                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
-                            </a>
-                            <!-- bottom left -->
-                        </div>
-                        <!-- article box -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <!-- row -->
-            </div>
-            <!-- container -->
-        </div>
-        <!-- news and article con -->
-    </section>
+   
     <!-- FOOTER SECTION -->
-    <section class="float-left w-100 position-relative main-box footer-con">
-        <img alt="vector" class="vector8 img-fluid position-absolute" src="assets/images/vector8.png">
-        <div class="container">
-            <div class="partner-con">
-                <ul class="mb-0 list-unstyled d-flex align-items-center justify-content-between">
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-1.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-2.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li class="img-mb">
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-3.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-4.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-5.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-6.png" alt="icon">
-                        </figure>
-                    </li>
-                </ul>
-                <!-- partner con -->
-            </div>
-            <div class="middle-portion">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12 footer-logo-con">
-                        <a href="index.html">
-                            <figure class="footer-logo">
-                                <img src="assets/images/lucky-logo.svg" class="img-fluid" alt="">
-                            </figure>
-                        </a>
-                        <p class="text-size-16 footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempororem ipsum dolor sit am econsect ametconsectetetur adipiscing.</p>
-                        <figure class="mb-0 payment-icon">
-                            <img src="assets/images/payment-card.png" class="img-fluid" alt="">
-                        </figure>
-                    </div>
-                    <div class="col-lg-1 col-md-1 col-sm-6 col-12 d-lg-block d-none">
-
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="links">
-                            <h4 class="heading">Quick Links</h4>
-                            <hr class="line">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="index.html" class="text-size-16 text text-decoration-none">Home</a></li>
-                                <li><a href="service.html" class="text-size-16 text text-decoration-none">Services</a></li>
-                                <li><a href="blog.html" class="text-size-16 text text-decoration-none">Latest News</a></li>
-                                <li><a href="booking.html" class="text-size-16 text text-decoration-none">Booking</a></li>
-                                <li><a href="destinations.html" class="text-size-16 text text-decoration-none mb-0">Destinations</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="links var1">
-                            <h4 class="heading">Support</h4>
-                            <hr class="line">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="about.html" class="text-size-16 text text-decoration-none">About Us</a></li>
-                                <li><a href="contact.html" class="text-size-16 text text-decoration-none">Contact Us</a></li>
-                                <li><a href="team.html" class="text-size-16 text text-decoration-none">Team</a></li>
-                                <li><a href="faq.html" class="text-size-16 text text-decoration-none">FAQ</a></li>
-                                <li><a href="testimonial.html" class="text-size-16 text text-decoration-none mb-0">Testimonial</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-sm-block">
-                        <div class="icon">
-                            <h4 class="heading">Get in Touch</h4>
-                            <hr class="line">
-                            <ul class="list-unstyled mb-0">
-                                <li class="text-size-16 text"><span class="d-inline-block">Email:</span> <a href="mailto:info@traveltrek.com" class="mb-0 text text-decoration-nonetext-size-16">info@traveltrek.com</a></li>
-                                <li class="text-size-16 text"><span class="d-inline-block">Phone:</span> <a href="tel:+12345678900" class="mb-0 text text-decoration-nonetext-size-16">+1 234 567 89 0 0</a></li>
-                                <li class="text-size-16 text1"><span class="d-inline-block">Fax:</span> <a href="tel:+1(987)65432199" class="mb-0 text text-decoration-nonetext-size-16">+1 ( 987 ) 654 321 9 9</a></li>
-                                <li class="social-icons">
-                                    <div class="circle"><a href="https://www.facebook.com/login/"><i
-                        class="fa-brands fa-square-facebook"></i></a></div>
-                                    <div class="circle"><a href="https://twitter.com/i/flow/login"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></div>
-                                    <div class="circle"><a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>
-                                    </div>
-                                    <div class="circle"><a href="https://www.pinterest.com/"><i
-                        class="fa-brands fa-square-pinterest"></i></a></div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright-con">
-                <div class="row">
-                    <div class="col-12">
-                        <p class="text-size-16">Copyright ©2024 TravelTrek.com All Rights Reserved
-                        </p>
-                    </div>
-                </div>
-                <!-- copyright con -->
-            </div>
-            <!-- container -->
-        </div>
-        <!-- footer con -->
-    </section>
+    <div id="lucky-footer-container"></div>
 
     <!-- BACK TO TOP BUTTON -->
-    <button id="back-to-top-btn" title="Back to Top"></button>
+    <button id="back-to-top-btn" title="Book Now"></button>
+
+    <button id="back-to-top-btn-left" title="Whatsapp Live-Chat"></button>
+
+    <script src="assets/component/search.js"></script>
+    <script src="assets/component/topBar.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -590,8 +356,13 @@
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/search.js"></script>
-    <script src="assets/component/topBar.js"></script>
+    <script src="assets/component/search.js"></script>
+    <script src="assets/MasterJs/wholeTab.js"></script>
+    <script src="assets/MasterJs/destination.js"></script>
+    <script src="assets/MasterJs/testo.js"></script>
+    <script src="assets/component/LoaderAndHeader.js"></script>
+    <script src="assets/component/about.js"></script>
+    <script src="assets/component/footer.js"></script>
 
 </body>
 
