--- a/booking.html
+++ b/booking.html
@@ -49,20 +49,8 @@
     <div class="bg-outer-wrapper booking-wrapper float-left w-100">
         <!-- TOP BAR SECTION -->
         <div class="w-100 float-left top-bar-con main-box">
-            <div class="container">
-                <div class="top-bar-inner-con d-flex align-items-center justify-content-between">
-                    <div class="left-con">
-                        <a href="mailto:help@traveltrek.com"><i class="fa-solid fa-envelope"></i> help@traveltrek.com</a>
-                        <!-- left con -->
-                    </div>
-                    <div class="right-con"><a href="tel:+1(0800)123456"><i class="fa-solid fa-square-phone"></i> +1 (0800) 123
-              456</a>
-                        <!-- right con -->
-                    </div>
-                    <!-- top bar inner con -->
-                </div>
-                <!-- container -->
-            </div>
+            <!-- Loader Load -->
+            <div id="lucky-loderAndHeader-container"></div>
             <!-- top bar con -->
         </div>
         <div class="clearfix"></div>
@@ -602,126 +590,15 @@
     </section>
 
     <!-- FOOTER SECTION -->
-    <section class="float-left w-100 position-relative main-box footer-con">
-        <img alt="vector" class="vector8 img-fluid position-absolute" src="assets/images/vector8.png">
-        <div class="container">
-            <div class="partner-con">
-                <ul class="mb-0 list-unstyled d-flex align-items-center justify-content-between">
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-1.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-2.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li class="img-mb">
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-3.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-4.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-5.png" alt="icon">
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="mb-0">
-                            <img class="img-fluid" src="assets/images/partner-logo-6.png" alt="icon">
-                        </figure>
-                    </li>
-                </ul>
-                <!-- partner con -->
-            </div>
-            <div class="middle-portion">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-12 footer-logo-con">
-                        <a href="index.html">
-                            <figure class="footer-logo">
-                                <img src="assets/images/lucky-logo.svg" class="img-fluid" alt="">
-                            </figure>
-                        </a>
-                        <p class="text-size-16 footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempororem ipsum dolor sit am econsect ametconsectetetur adipiscing.</p>
-                        <figure class="mb-0 payment-icon">
-                            <img src="assets/images/payment-card.png" class="img-fluid" alt="">
-                        </figure>
-                    </div>
-                    <div class="col-lg-1 col-md-1 col-sm-6 col-12 d-lg-block d-none">
-
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="links">
-                            <h4 class="heading">Quick Links</h4>
-                            <hr class="line">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="index.html" class="text-size-16 text text-decoration-none">Home</a></li>
-                                <li><a href="service.html" class="text-size-16 text text-decoration-none">Services</a></li>
-                                <li><a href="blog.html" class="text-size-16 text text-decoration-none">Latest News</a></li>
-                                <li><a href="booking.html" class="text-size-16 text text-decoration-none">Booking</a></li>
-                                <li><a href="destinations.html" class="text-size-16 text text-decoration-none mb-0">Destinations</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-                        <div class="links var1">
-                            <h4 class="heading">Support</h4>
-                            <hr class="line">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="about.html" class="text-size-16 text text-decoration-none">About Us</a></li>
-                                <li><a href="contact.html" class="text-size-16 text text-decoration-none">Contact Us</a></li>
-                                <li><a href="team.html" class="text-size-16 text text-decoration-none">Team</a></li>
-                                <li><a href="faq.html" class="text-size-16 text text-decoration-none">FAQ</a></li>
-                                <li><a href="testimonial.html" class="text-size-16 text text-decoration-none mb-0">Testimonial</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-sm-block">
-                        <div class="icon">
-                            <h4 class="heading">Get in Touch</h4>
-                            <hr class="line">
-                            <ul class="list-unstyled mb-0">
-                                <li class="text-size-16 text"><span class="d-inline-block">Email:</span> <a href="mailto:info@traveltrek.com" class="mb-0 text text-decoration-nonetext-size-16">info@traveltrek.com</a></li>
-                                <li class="text-size-16 text"><span class="d-inline-block">Phone:</span> <a href="tel:+12345678900" class="mb-0 text text-decoration-nonetext-size-16">+1 234 567 89 0 0</a></li>
-                                <li class="text-size-16 text1"><span class="d-inline-block">Fax:</span> <a href="tel:+1(987)65432199" class="mb-0 text text-decoration-nonetext-size-16">+1 ( 987 ) 654 321 9 9</a></li>
-                                <li class="social-icons">
-                                    <div class="circle"><a href="https://www.facebook.com/login/"><i
-                        class="fa-brands fa-square-facebook"></i></a></div>
-                                    <div class="circle"><a href="https://twitter.com/i/flow/login"><i
-                        class="fa-brands fa-square-x-twitter"></i></a></div>
-                                    <div class="circle"><a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>
-                                    </div>
-                                    <div class="circle"><a href="https://www.pinterest.com/"><i
-                        class="fa-brands fa-square-pinterest"></i></a></div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright-con">
-                <div class="row">
-                    <div class="col-12">
-                        <p class="text-size-16">Copyright ©2024 TravelTrek.com All Rights Reserved
-                        </p>
-                    </div>
-                </div>
-                <!-- copyright con -->
-            </div>
-            <!-- container -->
-        </div>
-        <!-- footer con -->
-    </section>
+    <div id="lucky-footer-container"></div>
 
     <!-- BACK TO TOP BUTTON -->
-    <button id="back-to-top-btn" title="Back to Top"></button>
+    <button id="back-to-top-btn" title="Book Now"></button>
+
+    <button id="back-to-top-btn-left" title="Whatsapp Live-Chat"></button>
+
+    <script src="assets/component/search.js"></script>
+    <script src="assets/component/topBar.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -731,9 +608,15 @@
     <script src="assets/js/video-section.js"></script>
     <script src="assets/js/jquery.validate.js"></script>
     <script src="assets/js/wow.js"></script>
+    <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/search.js"></script>
-    <script src="assets/component/topBar.js"></script>
+    <script src="assets/component/search.js"></script>
+    <script src="assets/MasterJs/wholeTab.js"></script>
+    <script src="assets/MasterJs/destination.js"></script>
+    <script src="assets/MasterJs/testo.js"></script>
+    <script src="assets/component/LoaderAndHeader.js"></script>
+    <script src="assets/component/about.js"></script>
+    <script src="assets/component/footer.js"></script>
 
 </body>
 
