file change color change search bar add

--- a/booking.html
+++ b/booking.html
@@ -457,45 +457,7 @@
             <!-- search booking tab con -->
         </div>
         <!-- WHAT WE SERVE SECTION -->
-        <section class="float-left w-100 what-we-serve-con position-relative main-box padding-top padding-bottom">
-            <img alt="vector" class="vector4 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector4.png">
-            <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
-            <div class="container wow bounceInUp" data-wow-duration="2s">
-                <div class="row">
-                    <div class="col-lg-5">
-                        <h4 class="mustard-text text-uppercase">What We Serve</h4>
-                        <h2 class="text-uppercase text-right">Top Values <br> For You!</h2>
-                    </div>
-                    <div class="col-xl-10 col-12 mr-auto ml-auto serve-outer text-center">
-                        <div class="server-box var1">
-                            <img class="img-fluid" src="assets/images/serve-icon1.png" alt="icon">
-                            <h4>Lot of Choices</h4>
-                            <p class="mb-0">Lorem ipsum dolor sit ametc onsectetur adipiscing elit sed do eiusmod tempor incididun tut labore et dolore.
-                            </p>
-                            <!-- server box -->
-                        </div>
-                        <div class="server-box var2">
-                            <img class="img-fluid" src="assets/images/serve-icon2.png" alt="icon">
-                            <h4>Best Tour Guide</h4>
-                            <p class="mb-0">Lorem ipsum dolor sit ametc onsectetur adipiscing elit sed do eiusmod tempor incididun tut labore et dolore.
-                            </p>
-                            <!-- server box -->
-                        </div>
-                        <div class="server-box var3">
-                            <img class="img-fluid" src="assets/images/serve-icon3.png" alt="icon">
-                            <h4>Easy Booking </h4>
-                            <p class="mb-0">Lorem ipsum dolor sit ametc onsectetur adipiscing elit sed do eiusmod tempor incididun tut labore et dolore.
-                            </p>
-                            <!-- server box -->
-                        </div>
-                        <!-- server outer -->
-                    </div>
-                    <!-- row -->
-                </div>
-                <!-- container -->
-            </div>
-            <!-- what we serve con -->
-        </section>
+        <div id="lucky-watWeServe-container"></div>
         <!-- bg outer wrapper -->
     </div>
     <!-- FREQUESNTLY ASKED QUESTION SECTION -->
@@ -616,6 +578,7 @@
     <script src="assets/MasterJs/testo.js"></script>
     <script src="assets/component/LoaderAndHeader.js"></script>
     <script src="assets/component/about.js"></script>
+    <script src="assets/component/whatWeServe.js"></script>
     <script src="assets/component/footer.js"></script>
 
 </body>
