--- a/contact.html
+++ b/contact.html
@@ -213,10 +213,14 @@
     <!-- MAP SECTION -->
     <div class="float-left w-100 contact-map-con position-relative main-box">
         <div class="container-fluid p-0 wow bounceInUp" data-wow-duration="2s">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.367176743588!2d144.95736461590413!3d-37.81813957974638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65cbce858f6d7%3A0x9cc486b305ba3fb1!2s21%20King%20St%2C%20Melbourne%20VIC%203000%2C%20Australia!5e0!3m2!1sen!2s!4v1669200882885!5m2!1sen!2s"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.6580202026903!2d75.7957871006383!3d23.182678380421834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39637472e01c2ce7%3A0x18fe1eea330cf747!2s1!5e0!3m2!1sen!2sin!4v1723874267033!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <!-- container fluid -->
+        </div>
+        <!-- contact map con -->
+    </div>
+    <div class="float-left w-100 contact-map-con position-relative main-box">
+        <div class="container-fluid p-0 wow bounceInUp" data-wow-duration="2s">
+            <iframe src="https://www.google.com/maps/embed?pb=!3m2!1sen!2sin!4v1723874395721!5m2!1sen!2sin!6m8!1m7!1sfUdBaMg2ioq5IQZVLt7T8w!2m2!1d23.18246115085557!2d75.79820102462425!3f357.9156!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- contact map con -->
     </div>
